# alex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  main.py  pyproject.toml  test.py
.github/workflows/: cxx.yaml  python.yaml
alex/: __init__.py  cli.py  definitions.py  fitness.py  ga.py  logging.py  pattern.py  schema.py  signal.py  simulator.py  utils.py
alex/cli/: bench.py  evolve.py  utils.py
benchmark/: index.hpp  main.cpp  matrix.hpp  sim_matrix.hpp
caches/: AMD_EPYC_7413.yaml  Intel_Xeon_E5_2660_v3.yaml
core/: cachesim.hpp  main.cpp
core/arrays/: lexicographic.hpp  shuffle_rt.hpp
core/concepts/: array.hpp  matrix.hpp  pointer.hpp
core/patterns/: cholesky_banachiewicz.hpp  crout.hpp  himeno.hpp  jacobi2d.hpp  mm_ijk.hpp  mm_ijk_tiled.hpp  mm_ikj.hpp  mmt_ijk.hpp  mmt_ikj.hpp  stride2d.hpp
core/pointers/: simulated_pointer.hpp  true_pointer.hpp
core/utils/: mask.hpp  pdep.hpp  tail.hpp
extras/: common.py  extract_winning_layouts.py  generate_bench_input.py  plot_bench_results.py  plot_evolution.py  plot_results.py  plot_violin.py
tests/: test_cxx_core.py
