[tool.poetry]
name = "alex"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman <stephen@v25.nl>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
deap = "^1.3.3"
pycachesim = "^0.3.1"
pyyaml = "^6.0"
scoop = "^0.7.2.0"
numba = "^0.56.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
