[tool.poetry]
name = "alex"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman <stephen@v25.nl>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
pycachesim = "0.3.1"
pybind11 = "2.10.3"
pyyaml = "^6.0"
pydantic = "^1.10.7"
numpy = "^1.24.3"
rich = "^13.3.5"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
black = "*"
ipython = "8.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
alex-evolve = "alex.cli.evolve:main"
alex-bench = "alex.cli.bench:main"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.2.0", "setuptools", "pybind11>=2.10.3", "pycachesim==0.3.1"]
build-backend = "poetry.core.masonry.api"
